Fixup dashboard table responsiveness
for larger screen sizes, but not fitting the whole table.

--- a/client/styles/strider.less
+++ b/client/styles/strider.less
@@ -208,6 +208,15 @@ body {
   }
 }
 
+@media (max-width: 1304px) {
+  #dashboard {
+    .history,
+    .job-link a span {
+      display: none;
+    }
+  }
+}
+
 @media (max-width: 980px) {
   #dashboard {
     .triggered-by-header,
